gobmkida/c3/find_persistent_reading_cache_entry
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/find_persistent_reading_cache_entry/src/engine/persistent.c:827:25: error: use of undeclared identifier 'byte_9C689C'
v19 = ( unsigned __int8)byte_9C689C[i]; 
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/find_persistent_reading_cache_entry/src/obj/1/persistent.o] Error 1
